añadiendo archivo de js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandro Toledano | Frontend developer</title>
     <link rel="icon" href="https://www.pngkey.com/png/full/306-3063653_equally-the-new-jedi-order-no-longer-felt.png">
+    <link rel="stylesheet" href="style.css">
+    <!--Css de ìconos-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css">
 </head>
 <body>
     
