--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
     <link rel="stylesheet" href="style.css">
     <!--Css de ìconos-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!---------------------------------Barra de Navegación---------------------------------------------------------------------->
+
+    <!------------------------------------Seccion principa-------------------------------------------------------------------l-->
+
+    <section class="home" id="home">
+        <div class="social">
+            <a href="https://github.com/alejandronjj"><i class="bx bxl-github"></i></a>
+            <a href="https://github.com/alejandronjj"><i class="bx bxl-github"></i></a>
+            <a href="https://github.com/alejandronjj"><i class="bx bxl-github"></i></a>
+        </div>
+    </section>
     
+
+
+    <script src="./script.js"></script>
 </body>
 </html>
