--- a/index.html
+++ b/index.html
@@ -17,14 +17,37 @@
 <body>
     <!---------------------------------Barra de Navegación---------------------------------------------------------------------->
 
-    <!------------------------------------Seccion principa-------------------------------------------------------------------l-->
+    <!------------------------------------Seccion principal-------------------------------------------------------------------l-->
 
     <section class="home" id="home">
         <div class="social">
-            <a href="https://github.com/alejandronjj"><i class="bx bxl-github"></i></a>
-            <a href="https://github.com/alejandronjj"><i class="bx bxl-github"></i></a>
-            <a href="https://github.com/alejandronjj"><i class="bx bxl-github"></i></a>
+            <a href="https://github.com/alejandronjj" target="_blank"><i class="bx bxl-github"></i></a>
+            <a href="https://github.com/alejandronjj" target="_blank"><i class="bx bxl-github"></i></a>
+            <a href="https://github.com/alejandronjj" target="_blank"><i class="bx bxl-github"></i></a>
         </div>
+
+        <!--Imagen Inicial-->
+        <div class="home-img">
+            <img src="./assets/hackerman-dimas-pitak-transparent.png" alt="profile foto">
+        </div>
+        <div class="home-text">
+            <span>Hi, dear human, I'm</span>
+            <h1>Alejandro Toledano</h1>
+            <h2>Frontend Developer</h2>
+            <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+            <a href="mailto:alejandronjj2@gmail.com" target="_blank" class="btn">Contact me</a>
+
+        </div>
+    </section>
+
+    <!-----------Sobre mì------------>
+    <section class="about" id="about">
+        <div class="heading">
+            <h2>About me</h2>
+            <span>Introduction</span>
+
+        </div>
+
     </section>
     
 
