--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Alejandro Toledano Sánchez">
     <title>Alejandro Toledano | Frontend developer</title>
     <link rel="icon" href="https://www.pngkey.com/png/full/306-3063653_equally-the-new-jedi-order-no-longer-felt.png">
     <link rel="stylesheet" href="style.css">
@@ -202,13 +203,13 @@
         </div>
         <div class="portfilio-content">
             <div class="portfolio-img">
-                <img src="./assets/blog1.jpg" alt="portfolio">
+                <a href="https://alejandronjj.github.io/portfolio/" target="blank"><img src="./assets/blog1.jpg" alt="portfolio"></a>
             </div>
             <div class="portfolio-img">
                 <a href="https://alejandronjj.github.io/Universitylanding/" target="blank"><img src="./assets/Blog2.jpg" alt="University"></a>
             </div>
             <div class="portfolio-img">
-                <img src="./assets/blog3.jpg" alt="Pokemon Api">
+                <a href="https://alejandronjj.github.io/pokedexAPI/" target="blank"><img src="./assets/blog3.jpg" alt="Pokemon Api"></a>
             </div>
             <div class="portfolio-img">
                 <img src="./assets/blog4.jpg" alt="Gym landig">
@@ -238,6 +239,22 @@
         </div>
 
     </section>
+
+    <!--Footer-->
+    <section class="footer" id="footer">
+        <h2><a href="https://github.com/alejandronjj" target="blank">alejandronjj</a></h2>
+        <div class="footer-social">
+            <a href="https://www.facebook.com/" target="blank"><i class="bx bxl-facebook"></i></a>
+            <a href="https://twitter.com/" target="blank"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.instagram.com/" target="blank"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.reddit.com/" target="blank"><i class="bx bxl-reddit"></i></a>
+
+        </div>
+    </section>
+    <div class="copyright">
+        <p>Create By <a href="https://github.com/alejandronjj">alejandronjj</a>. I believe in love, freedom, science and knowledge. All my Github repositories are public. Copy whatever you want.</p>
+
+    </div>
 
 
     <script src="./script.js"></script>
