--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
 <body>
     <!---------------------------------Barra de Navegación---------------------------------------------------------------------->
 
+    <header>
+        <a href="" class="logo">Alejandro</a>
+        <!--Botón responsivo-->
+        <div class="bx bx-menu" id="menu-icon"></div>
+        <!--Barra-->
+        <ul class="navbar">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Portafolio</a></li>
+            <li><a href="">Contact</a></li>
+            <li><div class="bx bx-moon" id="darkmode"></div></li>
+        </ul>
+        <!--Botón modo oscuro-->
+        
+
+    </header>
+
     <!------------------------------------Seccion principal-------------------------------------------------------------------l-->
 
     <section class="home" id="home">
@@ -201,7 +220,7 @@
             <h2>Portafolio</h2>
             <span>My most decent web pages</span>
         </div>
-        <div class="portfilio-content">
+        <div class="portfolio-content">
             <div class="portfolio-img">
                 <a href="https://alejandronjj.github.io/portfolio/" target="blank"><img src="./assets/blog1.jpg" alt="portfolio"></a>
             </div>
