añadiendo referencias a la pàgina y corrección de detalles

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="bx bx-menu" id="menu-icon"></div>
         <!--Barra-->
         <ul class="navbar">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Skills</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Portafolio</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li><div class="bx bx-moon" id="darkmode"></div></li>
         </ul>
         <!--Botón modo oscuro-->
@@ -54,7 +54,7 @@
             <span>Hi, dear human, I'm</span>
             <h1>Alejandro Toledano</h1>
             <h2>Frontend Developer</h2>
-            <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+            <p>I'm an aeronautical engineer. I wield de power of learning. Whit that awesome power, I learned lots of things (like how to live, love and develop websites) </p>
             <a href="mailto:alejandronjj2@gmail.com" target="_blank" class="btn">Contact me</a>
 
         </div>
@@ -71,7 +71,8 @@
                 <img src="./assets/about me.jpg" alt="">
             </div>
             <div class="about-text">
-                <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                <p>
+                    Most of the time I wander the narrow sea of ​​the universe. Luckily, you can get in touch with me through this contact information.</p>
                 <!------Más información-->
                 <div class="information">
                     <!--primera caja-->
@@ -101,7 +102,7 @@
     <section class="skills" id="skills">
         <div class="heading">
             <h2>Skills</h2>
-            <span>My skills</span>
+            <span>It ain't much, but it's honest work</span>
         </div>
         <!--Habilidades contenido-->
         <div class="skills-container">
@@ -149,14 +150,14 @@
 
     <section class="services" id="services">
         <div class="heading">
-            <h2>Services</h2>
-            <span>My services</span>
+            <h2>Knowlegdge</h2>
+            <span>I have no idea what I'm doing, but I know I'm doing it really really well</span>
         </div>
         <div class="services-content">
             <div class="services-box">
                 <i class="bx bx-code-alt"></i>
                 <h3>Web Development</h3>
-                <a href="">Learn more</a>
+                <a href="">.</a>
             </div>
 
             <!--Box 2-->
@@ -164,21 +165,21 @@
             <div class="services-box">
                 <i class="bx bx-server"></i>
                 <h3>Frontend Develompment</h3>
-                <a href="">Learn more</a>
+                <a href="">.</a>
             </div>
 
             <!--Box3-->
             <div class="services-box">
                 <i class="bx bx-brush"></i>
                 <h3>UI Design</h3>
-                <a href="">Learn more</a>
+                <a href="">.</a>
             </div>
 
             <!--Box4-->
             <div class="services-box">
                 <i class="bx bxl-wordpress"></i>
                 <h3>Te amo</h3>
-                <a href="">Learn more</a>
+                <a href="">.</a>
             </div>
         </div>
     </section>
