--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Alejandro Toledano Sánchez">
+    <meta name="title" content="portafolio alejandronjj">
+    <meta name="keywords" content="alejandronjj,alejandronjj2,portoflio,portafolio">
+    <meta name="robots" content="index,follow">
     <title>Alejandro Toledano | Frontend developer</title>
     <link rel="icon" href="https://www.pngkey.com/png/full/306-3063653_equally-the-new-jedi-order-no-longer-felt.png">
     <link rel="stylesheet" href="style.css">
