añadiendo meta tags og

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <meta name="author" content="Alejandro Toledano Sánchez">
     <meta name="title" content="portafolio alejandronjj">
     <meta name="keywords" content="alejandronjj,alejandronjj2,portoflio,portafolio">
-    <meta name="robots" content="index,follow">
+    <meta property="og:title" content="Alejandro Toledano Portfolio"><!--Open grap protocl-->
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://play-lh.googleusercontent.com/-E6UbQ294TWPHa08XpxtsQDPm9HpoifE5IDjdLYKWxCFunA8DrpNt0rs0XtmRG5YTqM"><!--Imagen comparit-->
+    <meta property="og:url" content="https://alejandronjj.github.io/portfolio/">
+    <meta property="og:description" content="This is my web developer portfolio. I love you.">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Alejandro Toledano portfolio">
+    <meta name="robots" content="index,follow"> 
     <title>Alejandro Toledano | Frontend developer</title>
     <link rel="icon" href="https://www.pngkey.com/png/full/306-3063653_equally-the-new-jedi-order-no-longer-felt.png">
     <link rel="stylesheet" href="style.css">
