se añadió un 3 a css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Alejandro Toledano Portfolio"><!--Open grap protocl-->
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://play-lh.googleusercontent.com/-E6UbQ294TWPHa08XpxtsQDPm9HpoifE5IDjdLYKWxCFunA8DrpNt0rs0XtmRG5YTqM"><!--Imagen comparit-->
-    <meta property="og:url" content="https://alejandronjj.github.io/portfolio/">
+    <meta property="og:url" content="m ">
     <meta property="og:description" content="This is my web developer portfolio. I love you.">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Alejandro Toledano portfolio">
@@ -128,7 +128,7 @@
 
                 <!--Caja2-->
                 <div class="bars-box">
-                    <h3>CSS</h3>
+                    <h3>CSS3</h3>
                     <span>80%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar css-bar"></div>
