Corrigiendo palabra de en la descripción

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span>Hi, dear human, I'm</span>
             <h1>Alejandro Toledano</h1>
             <h2>Frontend Developer</h2>
-            <p>I'm an aeronautical engineer. I wield de power of learning. Whit that awesome power, I learned lots of things (like how to live, love and develop websites) </p>
+            <p>I'm an aeronautical engineer. I wield the power of learning. Whit that awesome power, I learned lots of things (like how to live, love and develop websites) </p>
             <a href="mailto:alejandronjj2@gmail.com" target="_blank" class="btn">Contact me</a>
 
         </div>
