--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="animationcolor">
                 <h1>Alejandro Toledano</h1>
             </div>
-            <h2>Frontend Developer</h2>
+            <h2>Engineer & Frontend Developer</h2>
             <p>I'm an aeronautical engineer. I wield the power of learning. Whit that awesome power, I learned lots of things (like how to live, love and develop websites) </p>
             <a href="mailto:alejandronjj2@gmail.com" target="_blank" class="btn">Contact me</a>
 
