--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <section class="services" id="services">
         <div class="heading">
-            <h2>Knowlegdge</h2>
+            <h2>Knowledge</h2>
             <span>I have no idea what I'm doing, but I know I'm doing it really really well</span>
         </div>
         <div class="services-content">
